exports[`default export is a function block returning JSX 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var App = function App() {
  var message = \'Hello!\';

  return _react2.default.createElement(
    \'h1\',
    null,
    message
  );
};

App.displayName = \'App\';
exports.default = App;"
`;

exports[`does not crash on block-arrow components with hoc wrapper 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function () {
  return fn(function (survey) {
    return _react2.default.createElement(\'div\', null);
  });
};"
`;

exports[`ignores default function block when no return statement 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

exports.default = function () {
  // Do some stuff, but don\'t return anything.
  var message = \'Hello!\';
  var answer = 42;
};"
`;

exports[`ignores default function block when not returning JSX 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

exports.default = function () {
  return new Promise(function (resolve) {
    window.addEventListener(\'scroll\', function () {
      resolve(window.scroll);
    });
  });
};"
`;

exports[`ignores default function block when not returning JSX 2`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function () {
  var message = \'Hello!\';

  return message;
};"
`;

exports[`ignores default function when not returning JSX 1`] = `
"\"use strict\";

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

exports.default = function () {
  return 42;
};"
`;

exports[`ignores displayName when if/else block has no return statement 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function (_ref) {
  var renderA = _ref.renderA,
      renderB = _ref.renderB;

  var loading = true;

  if (loading) renderA();else {
    renderB();
  }
};"
`;

exports[`ignores displayName with default export being a function declaration 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var Hello = function Hello() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

exports.default = Hello;


Hello.displayName = \'Hello\';"
`;

exports[`ignores jsx expression blocks 1`] = `
"'use strict';

Object.defineProperty(exports, "__esModule", {
  value: true
});

var _react = require('react');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = function HelloWorld() {
  var content = _react2.default.createElement(
    'div',
    null,
    [1, 2, 3].map(function (n) {
      return _react2.default.createElement(
        'h1',
        null,
        n
      );
    })
  );

  return _react2.default.createElement(
    'div',
    null,
    content
  );
};

HelloWorld.displayName = 'HelloWorld';
exports.default = HelloWorld;"
`;

exports[`ignores when displayName is already set on default export function 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var App = function App() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

exports.default = App;

// We know this will become App from the filename

App.displayName = \'App\';"
`;

exports[`ignores when displayName is already set on function 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = function HelloWorld() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

HelloWorld.displayName = \'HelloWorld\';

exports.default = HelloWorld;"
`;

exports[`ignores when jsx is assigned to a variable and not a component/function 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = _react2.default.createElement(
  \'h1\',
  null,
  \'Hello!\'
);

exports.default = HelloWorld;"
`;

exports[`isDisplayName check should ignore non-assignment expression statements 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
    value: true
});

require(\'normalize.css\');

require(\'./global.scss\');

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

var _reactRouter = require(\'react-router\');

var _reactIntl = require(\'react-intl\');

var _reactHelmet = require(\'react-helmet\');

var _reactHelmet2 = _interopRequireDefault(_reactHelmet);

var _webfontloader = require(\'webfontloader\');

var _webfontloader2 = _interopRequireDefault(_webfontloader);

var _lang = require(\'./util/lang\');

var _lang2 = _interopRequireDefault(_lang);

var _NotFound = require(\'./components/Pages/NotFound\');

var _NotFound2 = _interopRequireDefault(_NotFound);

var _Header = require(\'./components/Header\');

var _Header2 = _interopRequireDefault(_Header);

var _Footer = require(\'./components/Footer\');

var _Footer2 = _interopRequireDefault(_Footer);

var _routes = require(\'./routes\');

var _routes2 = _interopRequireDefault(_routes);

var _app = require(\'./app.scss\');

var _app2 = _interopRequireDefault(_app);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

_webfontloader2.default.load({
    google: {
        families: [\'Roboto:400,700\']
    }
});

var App = function App(_ref) {
    var intl = _ref.intl;


    (0, _lang.storeIntlReference)(intl);

    return _react2.default.createElement(
        \'div\',
        null,
        _react2.default.createElement(_reactHelmet2.default, { titleTemplate: \'%s - Datagro\', title: (0, _lang2.default)(\'home\') }),
        _react2.default.createElement(_Header2.default, null),
        _react2.default.createElement(
            \'div\',
            { className: _app2.default.main },
            _routes2.default.map(function (route, i) {
                return _react2.default.createElement(_reactRouter.Match, { key: i, pattern: route[0], component: route[1], exactly: !!route[2] });
            }),
            _react2.default.createElement(_reactRouter.Miss, { component: _NotFound2.default })
        ),
        _react2.default.createElement(_Footer2.default, null)
    );
};

App.displayName = \'App\';
exports.default = (0, _reactIntl.injectIntl)(App);"
`;

exports[`sets default export from folder name when index.js 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var exportDefaultFromIndexjs = function exportDefaultFromIndexjs() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

exportDefaultFromIndexjs.displayName = \'exportDefaultFromIndexjs\';
exports.default = exportDefaultFromIndexjs;"
`;

exports[`sets default export function name with deeply nested JSX return statement 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var App = function App() {
  if (true) {
    if (true) {
      if (true) {
        if (true) {
          return _react2.default.createElement(
            \'h1\',
            null,
            \'Hello!\'
          );
        }
      }
    }
  }
};

App.displayName = \'App\';
exports.default = App;"
`;

exports[`sets displayName for assigned functional component 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = function HelloWorld() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

HelloWorld.displayName = \'HelloWorld\';
exports.default = HelloWorld;"
`;

exports[`sets displayName for assigned functional component with block 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = function HelloWorld() {
  var message = \'Hello!\';

  return _react2.default.createElement(
    \'h1\',
    null,
    message
  );
};

HelloWorld.displayName = \'HelloWorld\';
exports.default = HelloWorld;"
`;

exports[`sets displayName for assignment default export 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var App = function App() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

App.displayName = \'App\';
exports.default = App;"
`;

exports[`sets displayName for named export functional component 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});
exports.HelloWorld = undefined;

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = exports.HelloWorld = function HelloWorld() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};
HelloWorld.displayName = \'HelloWorld\';"
`;

exports[`sets displayName for named export functional component with block 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});
exports.HelloWorld = undefined;

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = exports.HelloWorld = function HelloWorld() {
  var message = \'Hello!\';

  return _react2.default.createElement(
    \'h1\',
    null,
    message
  );
};
HelloWorld.displayName = \'HelloWorld\';"
`;

exports[`sets displayName when if/else block returns JSX 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var App = function App() {
  var loading = true;

  if (loading) {
    return _react2.default.createElement(
      \'h1\',
      null,
      \'Loading...\'
    );
  } else {
    return _react2.default.createElement(
      \'h1\',
      null,
      \'Hello!\'
    );
  }
};

App.displayName = \'App\';
exports.default = App;"
`;

exports[`sets displayName when if/else returns JSX 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var App = function App() {
  var loading = true;

  if (loading) return _react2.default.createElement(
    \'h1\',
    null,
    \'Loading...\'
  );else return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

App.displayName = \'App\';
exports.default = App;"
`;

exports[`sets displayName with default export being a function declaration 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var App = function App() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

App.displayName = \'App\';
exports.default = App;"
`;

exports[`sets function name for default export based on filename 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var App = function App() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

App.displayName = \'App\';
exports.default = App;"
`;

exports[`works when default export is a function block returning JSX 1`] = `
"'use strict';

Object.defineProperty(exports, "__esModule", {
  value: true
});

var _react = require('react');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function App() {
  var message = 'Hello!';

  return _react2.default.createElement(
    'h1',
    null,
    message
  );
};"
`;

exports[`works with preact 1`] = `
"'use strict';

Object.defineProperty(exports, "__esModule", {
  value: true
});

var _Header = require('./Header');

var _Header2 = _interopRequireDefault(_Header);

var _preact = require('preact');

var _preact2 = _interopRequireDefault(_preact);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/** @jsx preact.h */

var App = function App() {
  return _preact2.default.h(
    'main',
    null,
    _preact2.default.h(_Header2.default, { title: 'Hello!' }),
    _preact2.default.h(
      'h2',
      null,
      'World!'
    )
  );
};

exports.default = App;"
`;
